# yavkOS

./: Cargo.toml  README.md  build.rs  citations.md  credits.md  flake.nix  test.wasm  yos-example-app.wasm
.cargo/: config.toml
devlogs/: day-1.md  day-10.md  day-14.md  day-15.md  day-2.md  day-3.md  day-4.md  day-5.md  day-6-7.md  day-8.md  day-9.md
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  memory_broke.rs  mouse.rs  vga_buffer.rs  wasm.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs  simple_executor.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs
kernel/tests/src/: main.rs
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: bump.rs
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
