[package]
name = "yos"         # or any other name
version = "0.1.0"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
#ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]

[features]
default = [ "alloc-galloc" ]
alloc-lla = ["kernel/alloc-lla"]
alloc-bump = [ "kernel/alloc-bump" ]
alloc-galloc = [ "kernel/alloc-galloc" ]
